--- a/app/views/DragAndDrop.html
+++ b/app/views/DragAndDrop.html
@@ -1,8 +1,12 @@
 ﻿<section class="drag-and-drop-text">
 
-    <!-- ko if: content -->
+    <!-- ko if: questionInstructions().length > 0 -->
     <div class="question-content">
-        <div class="styled-content" data-bind="html: content, wrapElements: content"></div>
+        <div>
+            <!-- ko foreach: questionInstructions -->
+            <div class="styled-content" data-bind="contentBlock: $data "></div>
+            <!-- /ko -->
+        </div>
     </div>
     <!-- /ko -->
 
