--- a/app/views/Multipleselect.html
+++ b/app/views/Multipleselect.html
@@ -1,7 +1,11 @@
 ﻿<section>
-    <!-- ko if: content -->
+    <!-- ko if: questionInstructions().length > 0 -->
     <div class="question-content">
-        <div class="styled-content" data-bind="html: content, wrapElements: content"></div>
+        <div>
+            <!-- ko foreach: questionInstructions -->
+            <div class="styled-content" data-bind="contentBlock: $data "></div>
+            <!-- /ko -->
+        </div>
     </div>
     <!-- /ko -->
     <!-- ko if: isSurveyMode -->
