Revert "Add new editor to question instructions (#157)" (#160)
This reverts commit 7ca65563350333318ac498ffe9281e11d54b314d.

--- a/app/studying/views/readings.html
+++ b/app/studying/views/readings.html
@@ -51,7 +51,7 @@
                     <h3 class="learning-content" data-translate-text="[learning content]">Learning content</h3>
                     <div>
                         <!-- ko foreach: learningContent -->
-                        <div class="styled-content" data-bind="contentBlock: $data "></div>
+                        <div class="styled-content" data-bind="learningContent: $data "></div>
                         <!-- /ko -->
                     </div>
                 </div>
