--- a/app/views/scenarioquestion/ScenarioQuestion.html
+++ b/app/views/scenarioquestion/ScenarioQuestion.html
@@ -1,11 +1,7 @@
 ﻿<div>
-    <!-- ko if: questionInstructions().length > 0 -->
+    <!-- ko if: content -->
     <div class="question-content">
-        <div>
-            <!-- ko foreach: questionInstructions -->
-            <div class="styled-content" data-bind="contentBlock: $data "></div>
-            <!-- /ko -->
-        </div>
+        <div class="styled-content" data-bind="html: content, wrapElements: content"></div>
     </div>
     <!-- /ko -->
     <div class="scenario-question-container">
