--- a/css/fonts.less
+++ b/css/fonts.less
@@ -130,3 +130,9 @@
 .icon-linkedin2:before {
     content: "\e90d";
 }
+.icon-file:before {
+    content: "\e898"
+}
+.icon-zip:before {
+    content: "\e899"
+}
