Add embed document styles (#163)

--- a/css/styled-content.less
+++ b/css/styled-content.less
@@ -339,6 +339,9 @@
             }
         }
     }
+    iframe.document-block-iframe {
+        border: 1px solid rgba(66, 81, 95, 0.1);
+    }
     /*endregion*/
 
     /*region MEDIA EDITOR AUDIO*/
