Fix document block

--- a/css/styled-content.less
+++ b/css/styled-content.less
@@ -288,60 +288,92 @@
     .document-editor > div {
         padding-bottom: 16px;
         border-bottom: 1px solid rgba(66, 81, 95, 0.1);
+
         .document-container {
-            display: table;
-            width: 100%;
-            .download-document-btn {
-                padding: 10px 20px;
-                border-radius: 3px;
-                font-size: 14px;
-                white-space: nowrap;
-                text-decoration: none;
-                transition: background-color .3s;
-                color: rgba(66, 81, 95, 0.9);
-                background-color: rgba(66, 81, 95, 0.1);
 
-                &:hover, &:focus, &:active {
-                    color: rgba(66, 81, 95, 1);
-                    background-color: rgba(66, 81, 95, 0.2);
+            .document-info {
+                display: flex;
+                align-items: flex-start;
+                margin: 4px 0 10px 0;
+                justify-content: space-between;
+                
+                .document-icon, .document-title {
+                    display: flex;
                 }
-            }
-            .document-icon, .document-title, .download-document-btn-container, .separator {
-                display: table-cell;
-                vertical-align: middle;
-            }
-            .document-icon {
-                font-size: 36px;
-                color: rgba(66, 81, 95, 0.5);
 
-                .icon-container {
-                    position: relative;
+                .document-title-wrapper {
+                    display: flex;
+                    align-items: flex-start;
+                    padding: 2px 0 10px;
+                    flex: 0 1 730px;
 
-                    .document-type-text {
-                        position: absolute;
-                        font-family: 'Arial';
-                        text-transform: uppercase;
-                        font-size: 10px;
-                        top: 16px;
-                        left: 6px;
-                        line-height: 1;
+                    .document-icon {
+                        font-size: 36px;
+                        color: rgba(66, 81, 95, 0.5);
+                        margin: 0 21px 0 1px;
+                        flex: 0 0 32px;
+
+                        .icon-container {
+                            position: relative;
+
+                            .document-type-text {
+                                position: absolute;
+                                font-family: 'Arial';
+                                font-size: 13px;
+                                top: 13px;
+                                left: 0px;
+                                white-space: nowrap;
+                                width: 100%;
+                                text-align: center;
+                            }
+
+                            &::after {
+                                content: '';
+                                display: block;
+                                position: absolute;
+                                top: 50%;
+                                right: 0;
+                                width: 1px;
+                                height: 22px;
+                                margin: -11px -10px 0 0;
+                                background-color: rgba(66, 81, 95, 0.1);
+                            }
+                        }
+                    }
+                    
+                    .document-title {
+                        padding: 8px 20px 0 0;
+                        font-size: 14px;
+                        color: rgba(66, 81, 95, 0.8);
+                        word-wrap: break-word;
+                        word-break: break-word; /*Fix for Safari*/
+                        word-break: break-all; /*Fix for IE11*/
+                    }
+                }
+
+                .download-document-btn-container {
+                    display: flex;
+
+                    .download-document-btn {
+                        padding: 10px 20px;
+                        border-radius: 3px;
+                        font-size: 14px;
+                        white-space: nowrap;
+                        text-decoration: none;
+                        transition: background-color .3s;
+                        color: rgba(66, 81, 95, 0.9);
+                        background-color: rgba(66, 81, 95, 0.1);
+
+                        &:hover, &:focus, &:active {
+                            color: rgba(66, 81, 95, 1);
+                            background-color: rgba(66, 81, 95, 0.2);
+                        }
                     }
                 }
             }
-            .separator {
-                padding: 10px;
-                &:before {
-                    content: '';
-                    display: block;
-                    width: 1px;
-                    height: 22px;
-                    background-color: rgba(66, 81, 95, 0.1);
-                }
-            }
-            .document-title {
-                width: 100%;
-                font-size: 14px;
-                color: rgba(66, 81, 95, 0.8);
+
+            .document-editor-frame-wrapper {
+                padding-top: 15px;
             }
         }
     }
@@ -537,6 +569,20 @@
 
         h3 {
             font-size: 18px;
+        }
+    }
+}
+
+@media(max-width: 640px) {
+    .styled-content {
+        .document-editor {
+            &>div {
+                .document-container {
+                    .document-info {
+                        flex-wrap: wrap;
+                    }
+                }
+            }
         }
     }
 }
