Fix fib layout in table (#169)

--- a/css/styled-content.less
+++ b/css/styled-content.less
@@ -152,6 +152,12 @@
                         }
                     }
                 }
+
+            }
+
+            td,
+            th {
+                overflow: hidden;
             }
         }
     }
