--- a/css/noaccess.less
+++ b/css/noaccess.less
@@ -42,15 +42,18 @@
         width: 200px;
         min-width: 200px;
         text-transform: none;
+        text-overflow: ellipsis;
+        overflow: hidden;
         margin-top: 40px;
-
-        .icon-home {
-            font-size: 18px;
-        }
 
         span {
             margin-left: 7px;
             font-size: 16px;
+        }
+
+        .icon-home {
+            font-size: 18px;
+            margin-left: 0;
         }
     }
 }
