--- a/app/views/Hotspot.html
+++ b/app/views/Hotspot.html
@@ -4,7 +4,12 @@
     <div class="question-content">
         <div>
             <!-- ko foreach: questionInstructions -->
-            <div class="styled-content" data-bind="contentBlock: $data "></div>
+            <!-- ko ifnot: children.length -->
+            <div class="styled-content" data-bind="contentBlock: content"></div>
+            <!-- /ko -->
+            <!-- ko if: children.length -->
+            <div class="expandable-block-wrapper" data-bind="compose: { model:'viewmodels/expandableBlock', activationData: $data }"></div>
+            <!-- /ko -->
             <!-- /ko -->
         </div>
     </div>
