--- a/css/styles.less
+++ b/css/styles.less
@@ -21,6 +21,7 @@
 @import 'scenario.less';
 @import 'ranking-text.less';
 @import 'noaccess.less';
+@import 'expandableBlock.less';
 
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
