Add retrying for sending LTI results

--- a/app/summary/views/index.html
+++ b/app/summary/views/index.html
@@ -33,4 +33,13 @@
     </div>
     <!-- /ko -->
 
+    <!-- ko if: isSendingResults -->
+    <div class="finish-course-layout">
+        <div class="block-overlay"></div>
+        <div class="loader">
+            <span class="text" data-translate-text="[tracking and tracing reporting progress]">Reporting progress...</span>
+        </div>
+    </div>
+    <!-- /ko -->
+
 </section>
