--- a/app/views/shell.html
+++ b/app/views/shell.html
@@ -23,7 +23,7 @@
                     <button ></button>
                 </span>
                 <ul >
-                    <li data-translate-text="[save and continue later]" data-bind="click:close">save and continue later</li>
+                    <li data-translate-text="[save and continue later]" data-bind="click:close">Save and continue later</li>
                     <li data-translate-text="[finish course]" data-bind="click:openFinishPopup">Finish course</li>
                 </ul>
             </div>    
