Add mobile design to personalized (#195)

--- a/app/studying/views/studyadvice.html
+++ b/app/studying/views/studyadvice.html
@@ -1,6 +1,6 @@
 ﻿<section class="studyadvice view">
     <header class="view-header">
-        <h2 data-translate-text="[study advice]">Study advice</h2>
+        <h2 data-translate-text="[study advice]" data-bind="css: { upper: !sectionsToLearn.length }">Study advice</h2>
         <a href="#summary" class="button finish  " data-translate-text="[finish course]" data-bind="click: finish, visible:!sectionsToLearn.length">Finish course</a>
     </header>
 
