--- a/css/preassessment.less
+++ b/css/preassessment.less
@@ -140,4 +140,26 @@
     .preassessment .submit-wrapper .button {
         width: 100%;
     }
+
+    .header-progressbar-wrapper {
+        right: auto;
+        left: calc(50% - 120px);
+        bottom: 5px;
+        text-align: center;
+    }
+
+    .alternative-header {
+        .container-content-wrapper {
+            bottom: 40px;
+        }
+
+        .header-progressbar-wrapper {
+            bottom: -25px;
+        }
+
+        h2 {
+            width: 100%;
+            text-align: center;
+        }
+    }
 }
