--- a/css/readings.less
+++ b/css/readings.less
@@ -206,4 +206,42 @@
         display: block;
         margin: 10px;
     }
+
+    .question .section {
+        margin-right: 0;
+    }
+
+    .question .navigation-wrapper {
+        width: 100%;
+        text-align: center;
+    }
+
+    .question .navigation-wrapper h3 {
+        margin: 0 auto 5px;
+    }
+
+    .question .navigation {
+        margin: 0 auto;
+    }
+
+    .learning-section {
+        vertical-align: middle;
+    }
+
+    .question .section-progress-wrapper {
+        display: table-cell;
+        vertical-align: middle;
+    }
+
+    .progress-text-wrapper {
+        position: relative;
+        display: table-cell;
+        padding-left: 15px;
+        top: -4px;
+        vertical-align: middle;
+    }
+
+    .question .container {
+        margin-top: -15px;
+    }
 }
