--- a/css/studyadvice.less
+++ b/css/studyadvice.less
@@ -184,3 +184,23 @@
     line-height: 30px;
     font-family: 'twcenmt';
 }
+
+
+@media (max-width: 640px) { 
+    .studyadvice .section-recommended-reading-start {
+        width: 70px;
+    }
+
+    .studyadvice .section-recommended-reading-start .start {
+        width: auto;
+    }
+
+    .studyadvice .button.finish {
+        right: auto;
+        left: calc(50% - 80px);
+    }
+
+    .studyadvice .view-header h2.upper {
+        bottom: 60px;
+    }
+}
