--- a/css/styles.less
+++ b/css/styles.less
@@ -119,7 +119,7 @@ body {
     -ms-user-select: none;
     -webkit-user-select: none;
     user-select: none;
-    min-width: 560px;
+    min-width: 300px;
     background-color: #f4f4f4;
     color: #3c3c3c;
     font-size: 14px;
@@ -401,5 +401,13 @@ hr {
 @media (max-width: 700px) {
     .title h1 {
         padding: 20px 20px 200px;
+    }
+}
+
+@media (max-width: 640px) {
+    .view-header h2 {
+        width: 100%;
+        bottom: 30px;
+        text-align: center;
     }
 }
