--- a/css/summary.less
+++ b/css/summary.less
@@ -179,5 +179,27 @@
     .summary .section > div {
         display: block;
         text-align: center;
+        padding-left: 0;
+    }
+
+    .summary  {
+        .view-header h2 {
+            display: none;
+        }
+
+        .title h1 {
+            font-size: 30px;
+        }
+
+        .course-progress {
+            margin-left: -140px;
+            width: 280px;
+        }
+
+        .button.close-course {
+            display: block;
+            left: calc(50% - 80px);
+            right: auto;
+        }
     }
 }
