--- a/css/xApi.less
+++ b/css/xApi.less
@@ -248,6 +248,10 @@
 
     .xApi-login .form-submit button[type='button'] {
         margin: 25px auto 0;
+        width: 100%;
+        text-overflow: ellipsis;
+        word-wrap: break-word;
+        overflow: hidden;
     }
 
     .xApi-login .form-submit button[type='submit'] {
