--- a/css/single-select-image.less
+++ b/css/single-select-image.less
@@ -74,3 +74,12 @@
         box-shadow: 0 0 15px 5px @radio-image-checked-shadow-color;
     }
 }
+
+
+@media(max-width:640px) { 
+    .singleselectimage {
+        position: relative;
+        left: -30px;
+        width: calc(100% + 60px);
+    }
+}
