--- a/css/styled-content.less
+++ b/css/styled-content.less
@@ -429,92 +429,96 @@
     }
     /*endregion*/
 
-    /*#region CURATION*/
-    .link-curation-block {
+     /*#region CURATION*/
+     .link-curation-block {
         min-height: 72px;
+
+        .custom-description {
+            margin-bottom: -1px;
+            border-bottom: 1px solid transparent;
+        }
     }
+
     .content-inner-wrapper {
+        display: flex;
         padding: 14px 0;
         margin: 20px 0 0;
-        border-top: 1px solid rgba(222,222,222,.4);
-        border-bottom: 1px solid rgba(222,222,222,.4);
-    
+        width: 100%;
+        align-items: center;
+
+        & > a {
+            display: block;
+            max-width: 30%;
+            margin-right: 15px;
+        }
+
         .text-wrapper {
-            display: table-cell;
-            width: 600px;
+            display: block;
+            min-width: 1px;
+
+            & > a {
+                display: block;
+                text-decoration: none;
+            }
+
             .text-block {
-                float: left;
                 width: 100%;
-                height: 97px;
+                text-decoration: none;
+
                 div.link-title {
                     &.parsed {
-                        text-decoration: none; 
                         height: 27px;
                         font-size: 1em;
-                        overflow: hidden;
                         margin-bottom: 8px;
-                        display: inline-block;
-                        white-space: normal;
                         vertical-align: middle;
+                        white-space: nowrap;
+                        overflow: hidden;
+                        text-overflow: ellipsis;
+
                         &:hover {
                             text-decoration: underline;
-                            cursor: pointer; cursor: hand;
+                            cursor: pointer;
+                            cursor: hand;
                         }
                     }
+
                     &.empty {
-                        background-color: rgba(222,222,222,.4);
                         width: 40%;
                         height: 5px;
                         margin-top: 10px;
                         border-radius: 3px;
                     }
-                    
                 }
-                div.link-content { 
+
+                div.link-content {
+                    margin-bottom: 16px;
+                    height: 46px;
                     overflow: hidden;
+                    color: #3a4046;
+
                     &.parsed {
-                        height: 46px;
-                        margin-bottom: 5px;
                         line-height: 23px;
                         overflow: hidden;
                         font-size: .8em;
-                        color: #3a4046
                     }
+
                     &.empty {
-                        margin-top: 20px;
-                        width: 70%;
-                        height: 25px;
-                        &:before {
-                            content: '';
-                            width: 80%;
-                            display: block;
-                            height: 5px;
-                            border-radius: 3px; 
-                            background-color: rgba(222,222,222,.4);
-                        }
-                        &:after {
-                            content: '';
-                            margin-top: 10px;
-                            display: block;
-                            width: 60%;
-                            height: 5px;
-                            border-radius: 3px;
-                            background-color: rgba(222,222,222,.4);
-                        }
+                        display: none;
                     }
                 }
+
                 div.custom-description * {
                     margin-bottom: 5px !important;
                 }
             }
+
             .static-link-present {
-                width: 400px;
-                white-space: nowrap; 
-                overflow: hidden; 
+                white-space: nowrap;
+                overflow: hidden;
                 text-overflow: ellipsis;
                 position: relative;
-                color: #978b8b;
                 bottom: -3px;
+
                 .link-url {
                     text-decoration: none;
                     padding-left: 20px;
@@ -522,43 +526,46 @@
                     background-position-y: center;
                     font-size: 13px;
                     color: #978b8b;
-                    &:hover { 
+
+                    &:hover {
                         text-decoration: underline;
                     }
                 }
             }
         }
+
         div.images {
-            float: left;
-            width: 205px;
-            height: 123px;
+            width: 100%;
+            height: 114px;
+            max-width: 203px;
+
             &.parsed {
-                margin-right: 15px;
-                border-radius: 4px; 
+                display: flex;
                 overflow: hidden;
                 position: relative;
-                background-color: rgba(222,222,222,.4);
             }
-            &.deleted { 
+
+            &.deleted {
                 display: none;
             }
-            .image-wrapper * {
-                position: absolute;
-                top: 0;
-                left: 0;
-                right: 0;
-                bottom: 0;
+
+            .image-wrapper{
+                display: flex;
                 margin: auto;
-                height: auto;
-                max-width: 203px;
-                max-height: 123px;
-                border-radius: 3px;
+                align-items: center;
+                justify-content: center;
+                
+                * {
+                    margin: auto;
+                    height: auto;
+                    max-width: 203px;
+                    max-height: 114px;
+                    border-radius: 0;
+                }
             }
-            
         }
     }
-    /*#endregion CURATION*/
-
+    /*#endregion*/
 }
 
 @media (max-width:768px) {
@@ -588,6 +595,22 @@
                         flex-wrap: wrap;
                     }
                 }
+            }
+        }
+
+        .link-curation-block .content-inner-wrapper {
+            flex-direction: column;
+    
+            & > a {
+                max-width: none;
+    
+                .images.parsed {
+                    margin-bottom: 20px;
+                }
+            }
+    
+            .text-wrapper {
+                width: 100%;
             }
         }
     }
