fixed bug in the intro (#197)

--- a/css/buttons.less
+++ b/css/buttons.less
@@ -1,4 +1,6 @@
-﻿.button {
+﻿@import "variables.less";
+
+.button {
     -moz-user-select: none;
     -ms-user-select: none;
     -webkit-user-select: none;
