--- a/css/preassessment.less
+++ b/css/preassessment.less
@@ -1,4 +1,6 @@
-﻿.preassessment {
+﻿@import "variables.less";
+
+.preassessment {
     .question-title {
         color: @preassessment-question-title-color;
         font-size: @preassessment-question-title-font-size;
