--- a/css/studyadvice.less
+++ b/css/studyadvice.less
@@ -1,4 +1,6 @@
-﻿.studyadvice {
+﻿@import "variables.less";
+
+.studyadvice {
     .section-to-learn {
         background-color: @section-to-learn-background-color;
         border-radius: @section-to-learn-border-radius;
