--- a/css/text-matching.less
+++ b/css/text-matching.less
@@ -1,4 +1,6 @@
-﻿.text-matching-caption {
+﻿@import "variables.less";
+
+.text-matching-caption {
     color: @text-matching-hint-font-colour;
     margin-bottom: 20px;
     margin-top: 10px;
