--- a/css/variables.less
+++ b/css/variables.less
@@ -148,9 +148,9 @@
 /*mastered section holder border colour*/
 @mastered-section-holder-border-color:#9ad3d6;
 /*mastered section holder border width*/
-@mastered-section-holder-border-width:#3px;
+@mastered-section-holder-border-width:3px;
 /*mastered section holder border style*/
-@mastered-section-holder-border-style:#solid;
+@mastered-section-holder-border-style:solid;
 /*#endregion studyadvice page */
 /*#region readings page region*/
 /*section title font color*/
