--- a/css/xApi.less
+++ b/css/xApi.less
@@ -1,4 +1,6 @@
-﻿input:invalid{
+﻿@import "variables.less";
+
+input:invalid{
     box-shadow:none;
 }
 .xApi-login .content {
@@ -21,7 +23,7 @@
 
 .xApi-login .form-row.form-submit {
     min-height: 0;
-}
+} 
 
 .xApi-login .form-control {
     display: block;
