--- a/css/readings.less
+++ b/css/readings.less
@@ -1,4 +1,6 @@
-﻿.question {
+﻿@import "variables.less";
+
+.question {
     .disabled {
         .loader-wrapper {
             z-index: 500;
@@ -19,7 +21,6 @@
         float: right;
         width: 125px;
         text-align: center;
-
         & h3 {
             width: 105px;
         }
