Fix: broken markup for zip files

--- a/css/styled-content.less
+++ b/css/styled-content.less
@@ -377,6 +377,12 @@
             .document-editor-frame-wrapper {
                 padding-top: 15px;
             }
+
+            &.zip {
+                .document-block-iframe-wrapper {
+                    display: none;
+                }
+            }
         }
     }
     .document-block-iframe-wrapper {
