--- a/css/styles.less
+++ b/css/styles.less
@@ -222,6 +222,9 @@ hr {
     .content {
         border-bottom: @content-container-border-width @content-container-border-style @content-container-border-colour;
     }
+    .introduction-item {
+        list-style: none;
+    }
 }
 
 .content {
