--- a/app/studying/views/readings.html
+++ b/app/studying/views/readings.html
@@ -93,7 +93,18 @@
                                         <div class="question-feedback-text incorrect" data-translate-text="[incorrect answer]">Incorrect answer</div>
                                     </div>
                                     <!-- ko if: incorrectFeedback -->
-                                    <div class="question-feedback-description styled-content" data-bind="html: incorrectFeedback, wrapElements: content"></div>
+                                    <div class="question-content">
+                                        <div>
+                                            <!-- ko foreach: incorrectFeedback -->
+                                            <!-- ko ifnot: children.length -->
+                                            <div class="styled-content" data-bind="contentBlock: content"></div>
+                                            <!-- /ko -->
+                                            <!-- ko if: children.length -->
+                                            <div class="expandable-block-wrapper" data-bind="compose: { model:'viewmodels/expandableBlock', activationData: $data }"></div>
+                                            <!-- /ko -->
+                                            <!-- /ko -->
+                                        </div>
+                                    </div>
                                     <!-- /ko -->
                                     <!-- ko if: $parent.nextOrNotCompletedReading -->
                                     <div class="question-feedback-action-container incorrect">
@@ -131,7 +142,18 @@
                                         <div class="question-feedback-text correct" data-translate-text="[correct answer]">Correct answer</div>
                                     </div>
                                     <!-- ko if: correctFeedback -->
-                                    <div class="question-feedback-description styled-content" data-bind="html: correctFeedback, wrapElements: content"></div>
+                                    <div class="question-content">
+                                        <div>
+                                            <!-- ko foreach: correctFeedback -->
+                                            <!-- ko ifnot: children.length -->
+                                            <div class="styled-content" data-bind="contentBlock: content"></div>
+                                            <!-- /ko -->
+                                            <!-- ko if: children.length -->
+                                            <div class="expandable-block-wrapper" data-bind="compose: { model:'viewmodels/expandableBlock', activationData: $data }"></div>
+                                            <!-- /ko -->
+                                            <!-- /ko -->
+                                        </div>
+                                    </div>
                                     <!-- /ko -->
                                     <div class="question-feedback-action-container correct">
                                         <!-- ko if: $parent.nextOrNotCompletedReading -->
